force-app/main/default/objects/AWS_File__c/AWS_File__c.object-meta.xml
<CustomObject>
    <label>AWS File</label>
    <nameField>
        <label>File Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AWS Files</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>