force-app/main/default/objects/AWS_File__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>AWS Files</relationshipLabel>
    <relationshipName>AWS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>