force-app/main/default/objects/AWS_File__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>AWS Files</relationshipLabel>
    <relationshipName>AWS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>