force-app/main/default/objects/AWS_File__c/fields/File_Url__c.field-meta.xml
<CustomField>
    <fullName>File_Url__c</fullName>
    <label>File Url</label>
    <required>true</required>
    <type>Url</type>
</CustomField>