force-app/main/default/objects/AWS_File__c/fields/Game_Quote__c.field-meta.xml
<CustomField>
    <fullName>Game_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Quote</label>
    <referenceTo>Custom_Game_Quote__c</referenceTo>
    <relationshipLabel>AWS Files</relationshipLabel>
    <relationshipName>AWS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>