force-app/main/default/objects/AWS_File__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>AWS Files</relationshipLabel>
    <relationshipName>AWS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>