force-app/main/default/objects/AWS_File__c/fields/Old_File_ID__c.field-meta.xml
<CustomField>
    <fullName>Old_File_ID__c</fullName>
    <label>Old File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>