force-app/main/default/objects/AWS_File__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>AWS Files</relationshipLabel>
    <relationshipName>AWS_Files</relationshipName>
    <type>Lookup</type>
</CustomField>