force-app/main/default/objects/AWS_File__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Task_Record_ID__c ,  Task_Record_Name__c  ,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Task</label>
    <type>Text</type>
</CustomField>