force-app/main/default/objects/AWS_File__c/fields/Task_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_ID__c</fullName>
    <label>Task Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>