force-app/main/default/objects/AWS_File__c/fields/Task_Record_Name__c.field-meta.xml
<CustomField>
    <fullName>Task_Record_Name__c</fullName>
    <label>Task Record Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>