force-app/main/default/objects/AWS_File__c/fields/View__c.field-meta.xml
<CustomField>
    <fullName>View__c</fullName>
    <formula>HYPERLINK(&apos;/lightning/n/CMT_DocumentView?c__s3fileId=&apos;+ External_ID__c ,  File_Name__c , &apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View</label>
    <type>Text</type>
</CustomField>