force-app/main/default/objects/AWS_File__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <columns>Opportunity__c</columns>
    <columns>Lead__c</columns>
    <columns>Quote__c</columns>
    <columns>Task__c</columns>
    <columns>File_Url__c</columns>
    <columns>Old_File_ID__c</columns>
    <columns>View__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>